--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-native-hyperlink": "0.0.14",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "recharts": "^1.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
